--- a/style.css
+++ b/style.css
@@ -21,17 +21,23 @@
   font-size: 62.5%;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+
 html,
 body {
   width: 100%;
   height: 100%;
+
 }
 
 body {
   font-family: 'DM Sans';
   font-size: 1.6rem;
   text-align: center;
-
+  background-color: var(--brand-green-light-02);
   overflow: overlay;
 }
 
@@ -46,125 +52,29 @@ ul {
   list-style: none;
 }
 
-header::before {
-  content: "";
-  width: 100%;
-  height: calc(108rem + var(--nav-height));
-  background-color: var(--brande-green-light);
-  display: block;
-
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
+section {
+  padding-block: 10rem;
 }
-
-header {
-  margin-top: calc(4.1rem + var(--nav-height));
-}
-
-header h4 {
-  margin-bottom: 1.6rem;
-  font-size: 1.4rem;
-  color: var(--brand-green);
-}
-
-header h1 {
-  margin-bottom: 2.4rem;
-  font-size: 3.4rem;
-  color: var(--gray-headline);
-  line-height: 130%;
-}
-
-header p {
-  margin-bottom: 3.2rem;
-  font-size: 1.8rem;
-  line-height: 150%;
-  font-weight: 400;
-  color: var(--gray-paragraph);
-}
-
-header img {
-  width: 26.4rem;
-  display: block;
-  margin-inline: auto;
-  object-position: 0 2rem;
-}
-
-header button {
-  background-color: var(--brand-green);
-  border: none;
-  border-radius: 4rem;
-  margin-bottom: 6rem;
-
-  height: 6.2rem;
-  width: 26.3rem;
-
-  color: var(--white);
-  text-transform: uppercase;
-  font-size: 1.4rem;
-  font-weight: 700;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1.6rem;
-
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.stats {
-  width: 32.7rem;
-  border-radius: 0.6rem;
-  border: 0.1rem solid var(--brande-green-light);
-
-  margin-inline: auto;
-
-  background-color: var(--brand-beige);
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 6rem;
-
-  padding-block: 4rem;
-}
-
-.stat h3 {
-  color: var(--gray-headline);
-  font-size: 4.8rem;
-  margin-bottom: 0.4rem;
-}
-
-.stat p {
-  color: var(--brand-green);
-  margin: 0;
-  font-size: 1.6rem;
-  line-height: 150%;
-}
-
 
 /*====== NAV =======*/
 
 nav {
   display: flex;
+  width: 100vw;
 
   height: var(--nav-height);
 
   position: fixed;
   top: 0;
-  left: 50%;
-  transform: translateX(-50%);
+
+  z-index: 100;
 }
 
 nav.scroll {
   background: var(--brand-green);
-  width: 100vw;
-
 }
 
-nav.scroll svg:nth-child(1) path {
+nav.scroll .logo path {
   fill: var(--white);
 }
 
@@ -186,7 +96,7 @@ nav button {
 
 /*====== MENU EXPANDED =======*/
 body.menu-expanded> :not(nav) {
-  display: none;
+  visibility: hidden;
 }
 
 
@@ -207,6 +117,10 @@ body.menu-expanded .close-menu {
   visibility: visible;
 }
 
+.menu {
+  transform: translateY(100%);
+}
+
 body.menu-expanded .menu {
   position: fixed;
   top: 0;
@@ -216,11 +130,13 @@ body.menu-expanded .menu {
   height: 100vh;
 
   padding-top: var(--nav-height);
+
+  transition: transform 300ms;
+  transform: translateY(0%);
+
 }
 
-body.menu-expanded nav {
-  position: relative;
-}
+body.menu-expanded nav {}
 
 .menu ul:nth-child(1) {
   display: flex;
@@ -280,3 +196,162 @@ body.menu-expanded .logo path {
 body.menu-expanded button path {
   stroke: var(--white);
 }
+
+
+/*========HOME===========*/
+
+#home::before {
+  content: "";
+  width: 100%;
+  height: calc(108rem + var(--nav-height));
+  background-color: var(--brande-green-light);
+  display: block;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+#home {
+  padding-top: calc(4.1rem + var(--nav-height));
+}
+
+#home h4 {
+  margin-bottom: 1.6rem;
+  font-size: 1.4rem;
+  color: var(--brand-green);
+}
+
+#home h1 {
+  margin-bottom: 2.4rem;
+  font-size: 3.4rem;
+  color: var(--gray-headline);
+  line-height: 130%;
+}
+
+#home p {
+  margin-bottom: 3.2rem;
+  font-size: 1.8rem;
+  line-height: 150%;
+  font-weight: 400;
+  color: var(--gray-paragraph);
+}
+
+#home img {
+  width: 26.4rem;
+  display: block;
+  margin-inline: auto;
+  object-position: 0 2rem;
+}
+
+#home button {
+  background-color: var(--brand-green);
+  border: none;
+  border-radius: 4rem;
+  margin-bottom: 6rem;
+
+  height: 6.2rem;
+  width: 26.3rem;
+
+  color: var(--white);
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 700;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.6rem;
+
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.stats {
+  width: 32.7rem;
+  border-radius: 0.6rem;
+  border: 0.1rem solid var(--brande-green-light);
+
+  margin-inline: auto;
+
+  background-color: var(--brand-beige);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 6rem;
+
+  padding-block: 4rem;
+}
+
+.stat h3 {
+  color: var(--gray-headline);
+  font-size: 4.8rem;
+  margin-bottom: 0.4rem;
+}
+
+.stat p {
+  color: var(--brand-green);
+  margin: 0;
+  font-size: 1.6rem;
+  line-height: 150%;
+}
+
+
+
+/*====== SECTION CARDS =======*/
+
+
+
+#services header h4 {
+  font-size: 1.4rem;
+  line-height: 150%;
+
+  letter-spacing: 0.08rem;
+
+  text-transform: uppercase;
+  color: var(--brand-green);
+  margin-bottom: 1.6rem;
+}
+
+#services header h2 {
+  font-size: 3.0rem;
+  line-height: 3.9rem;
+  color: var(--gray-headline);
+  margin-bottom: 6rem;
+}
+
+#services .cards {
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
+}
+
+#services .card {
+  padding: 2.4rem;
+  text-align: left;
+
+  background: white;
+
+  border: 1px solid var(--brande-green-light);
+  border-radius: 0.6rem;
+}
+
+.card h3 {
+  margin-block: 1.6rem;
+  font-weight: 700;
+  font-size: 2.4rem;
+  line-height: 3.1rem;
+  color: var(--gray-headline);
+}
+
+.card p {
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 150%;
+  color: var(--gray-paragraph);
+}
+
+
+/*====== ABOUT =======*/
