--- a/style.css
+++ b/style.css
@@ -41,6 +41,37 @@ body {
   overflow: overlay;
 }
 
+.button {
+  background-color: var(--brand-green);
+  border: none;
+  border-radius: 4rem;
+  margin-bottom: 6rem;
+
+  padding: 1.6rem 3.2rem;
+  width: fit-content;
+
+
+  color: var(--white);
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 700;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.6rem;
+
+  text-decoration: none;
+
+  transition: background 300ms;
+}
+
+.button:hover {
+  background-color: var(--brand-green-hover);
+}
+
+
+
 .wrapper {
   width: 37.5rem;
   margin-left: auto;
@@ -54,6 +85,36 @@ ul {
 
 section {
   padding-block: 10rem;
+}
+
+section header h4 {
+  font-size: 1.4rem;
+  font-weight: 700;
+  line-height: 150%;
+  letter-spacing: 0.08rem;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  color: var(--brand-green);
+}
+
+section header h2 {
+  font-size: 3.0rem;
+  line-height: 3.9rem;
+  color: var(--gray-headline);
+
+}
+
+section header h1 {
+  font-size: 3.4rem;
+  color: var(--gray-headline);
+  line-height: 130%;
+}
+
+section .content p {
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 150%;
+  color: var(--gray-paragraph);
 }
 
 /*====== NAV =======*/
@@ -136,8 +197,6 @@ body.menu-expanded .menu {
 
 }
 
-body.menu-expanded nav {}
-
 .menu ul:nth-child(1) {
   display: flex;
   flex-direction: column;
@@ -174,6 +233,12 @@ body.menu-expanded nav {}
   margin-bottom: 8rem;
 
 
+}
+
+.menu .button:hover {
+  background-color: var(--brand-green);
+  color: var(--white);
+  filter: brightness(1.2);
 }
 
 .social-links {
@@ -217,20 +282,8 @@ body.menu-expanded button path {
   padding-top: calc(4.1rem + var(--nav-height));
 }
 
-#home h4 {
-  margin-bottom: 1.6rem;
-  font-size: 1.4rem;
-  color: var(--brand-green);
-}
-
-#home h1 {
-  margin-bottom: 2.4rem;
-  font-size: 3.4rem;
-  color: var(--gray-headline);
-  line-height: 130%;
-}
-
 #home p {
+  margin-top: 2.4rem;
   margin-bottom: 3.2rem;
   font-size: 1.8rem;
   line-height: 150%;
@@ -245,25 +298,7 @@ body.menu-expanded button path {
   object-position: 0 2rem;
 }
 
-#home button {
-  background-color: var(--brand-green);
-  border: none;
-  border-radius: 4rem;
-  margin-bottom: 6rem;
-
-  height: 6.2rem;
-  width: 26.3rem;
-
-  color: var(--white);
-  text-transform: uppercase;
-  font-size: 1.4rem;
-  font-weight: 700;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1.6rem;
-
+#home .button {
   margin-right: auto;
   margin-left: auto;
 }
@@ -302,23 +337,7 @@ body.menu-expanded button path {
 
 /*====== SECTION CARDS =======*/
 
-
-
-#services header h4 {
-  font-size: 1.4rem;
-  line-height: 150%;
-
-  letter-spacing: 0.08rem;
-
-  text-transform: uppercase;
-  color: var(--brand-green);
-  margin-bottom: 1.6rem;
-}
-
-#services header h2 {
-  font-size: 3.0rem;
-  line-height: 3.9rem;
-  color: var(--gray-headline);
+#services h2 {
   margin-bottom: 6rem;
 }
 
@@ -355,3 +374,105 @@ body.menu-expanded button path {
 
 
 /*====== ABOUT =======*/
+
+#about {
+  text-align: left;
+  background-color: var(--brand-beige)
+}
+
+#about h2 {
+  margin-bottom: 2.4rem;
+}
+
+#about .content p {
+  margin-top: 2.4rem;
+  margin-bottom: 6rem;
+}
+
+#about .content img {
+  height: 28.2rem;
+  width: 32.7rem;
+}
+
+/*====== CONTACT =======*/
+
+#contact {
+  text-align: left;
+}
+
+#contact header {
+  margin-bottom: 3.2rem;
+}
+
+#contact ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  margin-bottom: 3.2rem;
+}
+
+#contact ul li {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+
+#contact img {
+  width: 32.4rem;
+  height: 21.3rem;
+}
+
+/*====== FOOTER =======*/
+
+
+
+footer {
+  padding-block: 6rem;
+  background-color: var(--brand-green);
+  text-align: left;
+  color: var(--white);
+
+}
+
+footer .logo {
+  display: inline-block;
+  margin-bottom: 2.4rem;
+}
+
+footer .logo svg {
+  width: 23.6rem;
+  height: 3.1rem;
+}
+
+footer .logo path {
+  fill: white;
+}
+
+footer p {
+  color: var(--brand-beige);
+  line-height: 2;
+  margin-bottom: 3.2rem;
+}
+
+footer .social-links {
+  justify-content: flex-start;
+}
+
+/*====== back to top =======*/
+
+#backToTopButton {
+  position: fixed;
+  bottom: 1rem;
+  right: 2.5rem;
+  opacity: 0;
+  visibility: hidden;
+
+  transform: translateY(100%);
+  transition: 200ms;
+}
+
+#backToTopButton.show {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
