--- a/style.css
+++ b/style.css
@@ -5,15 +5,17 @@
 }
 
 :root {
-  --brand-green: #00856F;
-  --brande-green-light: #DCE9E2;
-  --brand-green-light-02: #F7F9F9;
-  --brand-beige: #FFFAF1;
-  --brand-green-hover: #00453A;
+  --hue: 100;
 
-  --gray-headline: #061800;
-  --gray-paragraph: #384633;
-  --white: #EDEDED;
+  --brand-green: hsl(var(--hue), 100%, 26%);
+  --brande-green-light: hsl(calc(var(--hue) - 22), 23%, 89%);
+  --brand-green-light-02: hsl(180, 14%, 97%);
+  --brand-beige: hsl(39, 100%, 97%);
+  --brand-green-hover: hsl(var(--hue), 100%, 14%);
+
+  --gray-headline: hsl(105, 100%, 5%);
+  --gray-paragraph: hsl(104, 16%, 24%);
+  --white: hsl(0, 0%, 93%);
 
   --nav-height: 7.2rem;
 
@@ -117,6 +119,33 @@ section .content p {
   color: var(--gray-paragraph);
 }
 
+/* ===== CUSTOM COLORS =====*/
+
+#services .card circle {
+  fill: var(--brande-green-light);
+}
+
+#backToTopButton circle,
+#navigation .logo path[fill*="#00856F"] {
+  fill: var(--brand-green);
+}
+
+body.menu-expanded #navigation .logo path,
+#navigation.scroll .logo path {
+  fill: var(--white);
+}
+
+#navigation.scroll button.open-menu path[stroke*="#00856F"] {
+  stroke: var(--white);
+}
+
+button.open-menu path[stroke*="#00856F"],
+#contact li path {
+  stroke: var(--brand-green);
+}
+
+
+
 /*====== NAV =======*/
 
 nav {
@@ -135,14 +164,6 @@ nav.scroll {
   background: var(--brand-green);
 }
 
-nav.scroll .logo path {
-  fill: var(--white);
-}
-
-nav.scroll button path {
-  stroke: var(--white);
-}
-
 nav .wrapper {
   display: flex;
   align-items: center;
@@ -154,6 +175,8 @@ nav button {
   border: none;
   cursor: pointer;
 }
+
+
 
 /*====== MENU EXPANDED =======*/
 body.menu-expanded> :not(nav) {
@@ -356,6 +379,8 @@ body.menu-expanded button path {
   border: 1px solid var(--brande-green-light);
   border-radius: 0.6rem;
 }
+
+
 
 .card h3 {
   margin-block: 1.6rem;
