--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --hue: 100;
+  --hue: 30;
 
   --brand-green: hsl(var(--hue), 100%, 26%);
   --brande-green-light: hsl(calc(var(--hue) - 22), 23%, 89%);
@@ -75,9 +75,8 @@ body {
 
 
 .wrapper {
-  width: 37.5rem;
-  margin-left: auto;
-  margin-right: auto;
+  width: min(50rem, 100%);
+  margin-inline: auto;
   padding-inline: 2.4rem;
 }
 
@@ -176,6 +175,11 @@ nav button {
   cursor: pointer;
 }
 
+nav .menu,
+nav .close-menu {
+  position: fixed;
+}
+
 
 
 /*====== MENU EXPANDED =======*/
@@ -206,7 +210,6 @@ body.menu-expanded .close-menu {
 }
 
 body.menu-expanded .menu {
-  position: fixed;
   top: 0;
   left: 0;
   background-color: var(--brand-green);
@@ -326,8 +329,8 @@ body.menu-expanded button path {
   margin-left: auto;
 }
 
-.stats {
-  width: 32.7rem;
+#home .stats {
+  width: 100%;
   border-radius: 0.6rem;
   border: 0.1rem solid var(--brande-green-light);
 
@@ -343,13 +346,13 @@ body.menu-expanded button path {
   padding-block: 4rem;
 }
 
-.stat h3 {
+#home .stat h3 {
   color: var(--gray-headline);
   font-size: 4.8rem;
   margin-bottom: 0.4rem;
 }
 
-.stat p {
+#home .stat p {
   color: var(--brand-green);
   margin: 0;
   font-size: 1.6rem;
@@ -500,4 +503,82 @@ footer .social-links {
   opacity: 1;
   visibility: visible;
   transform: translateY(0);
+}
+
+/*====== RESPONSIVIDADE =======*/
+
+@media (min-width: 1024px) {
+
+  /*====== GERAL =======*/
+  .wrapper {
+    width: min(112rem, 100%);
+  }
+
+  /*====== NAVIGATION =======*/
+  /*====== RESET =======*/
+  nav#navigation .wrapper * {
+    margin: 0;
+    padding: 0;
+    visibility: initial;
+    display: initial;
+    opacity: initial;
+    flex-direction: initial;
+    position: initial;
+    font-weight: initial;
+    font-size: initial;
+    transform: initial;
+    color: initial;
+    background-color: initial;
+  }
+
+  nav#navigation .open-menu,
+  nav#navigation .close-menu,
+  nav#navigation .social-links {
+    display: none;
+  }
+
+  nav#navigation .menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 60%;
+  }
+
+  nav#navigation .menu ul:nth-child(1) {
+    display: flex;
+    gap: 3.2rem;
+
+  }
+
+  nav#navigation .menu ul li a {
+    color: var(--brand-green);
+    opacity: 0.7;
+  }
+
+  nav#navigation .menu a.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 2.4rem;
+
+    border: 1px solid var(--brand-green);
+    border-radius: 4rem;
+
+    color: var(--brand-green);
+
+    font-weight: 700;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    text-transform: uppercase;
+  }
+
+  nav#navigation.scroll .menu ul li a {
+    color: var(--brande-green-light);
+    opacity: 0.6;
+  }
+
+  nav#navigation.scroll .menu a.button {
+    border-color: var(--white);
+    color: var(--white);
+  }
 }
