--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
   --brand-green: hsl(var(--hue), 100%, 26%);
   --brande-green-light: hsl(calc(var(--hue) - 22), 23%, 89%);
-  --brand-green-light-02: hsl(180, 14%, 97%);
+  --brand-green-light-02: hsl(calc(var(--hue) + 10), 14%, 97%);
   --brand-beige: hsl(39, 100%, 97%);
   --brand-green-hover: hsl(var(--hue), 100%, 14%);
 
@@ -294,7 +294,7 @@ body.menu-expanded button path {
 #home::before {
   content: "";
   width: 100%;
-  height: calc(108rem + var(--nav-height));
+  height: calc(70% + var(--nav-height));
   background-color: var(--brande-green-light);
   display: block;
 
@@ -510,8 +510,13 @@ footer .social-links {
 @media (min-width: 1024px) {
 
   /*====== GERAL =======*/
+  body {
+    overflow: auto;
+  }
+
   .wrapper {
     width: min(112rem, 100%);
+    display: grid;
   }
 
   /*====== NAVIGATION =======*/
@@ -529,6 +534,7 @@ footer .social-links {
     transform: initial;
     color: initial;
     background-color: initial;
+    filter: initial;
   }
 
   nav#navigation .open-menu,
@@ -572,6 +578,12 @@ footer .social-links {
     text-transform: uppercase;
   }
 
+  nav#navigation .menu a.button:hover {
+    background-color: var(--brand-green);
+    border: none;
+    color: var(--white);
+  }
+
   nav#navigation.scroll .menu ul li a {
     color: var(--brande-green-light);
     opacity: 0.6;
@@ -580,5 +592,110 @@ footer .social-links {
   nav#navigation.scroll .menu a.button {
     border-color: var(--white);
     color: var(--white);
+  }
+
+  nav#navigation .menu li a.active,
+  nav#navigation .menu li a:hover {
+    opacity: 1;
+    font-weight: 700;
+
+  }
+
+  nav#navigation .menu li a::after {
+    content: '';
+    width: 0%;
+    height: 2px;
+    background-color: var(--brand-green-light-02);
+    display: block;
+    left: -0.5rem;
+
+    position: relative;
+    bottom: -2rem;
+
+    transition: width 0.2s;
+  }
+
+  nav#navigation.scroll .menu li a::after {
+    background-color: var(--white);
+
+  }
+
+  nav#navigation .menu li a.active:after,
+  nav#navigation .menu li a:hover::after {
+    padding-inline: 0.8rem;
+    width: 100%;
+  }
+
+  nav#navigation.scroll .menu li a.active,
+  nav#navigation.scroll .menu li a:hover {
+    opacity: 1;
+  }
+
+  nav#navigation.scroll .menu a.button.active,
+  nav#navigation.scroll .menu a.button:hover {
+    background-color: var(--brand-green);
+    filter: brightness(1.3);
+    border: none;
+  }
+
+  /*====== HOME =======*/
+  #home::before {
+    height: calc(86% - var(--nav-height));
+  }
+
+  #home {
+    padding-top: var(--nav-height);
+  }
+
+  #home .wrapper {
+    grid-template-columns: 60.5rem 1fr;
+    grid-template-areas:
+      'A B'
+      'C C';
+  }
+
+
+
+  #home .col-a {
+    grid-area: A;
+    text-align: left;
+    align-self: center;
+  }
+
+  #home .col-b {
+    grid-area: B;
+  }
+
+  #home h1 {
+    font-size: 5.2rem;
+  }
+
+  #home .content p {
+    font-size: 1.8rem;
+  }
+
+  #home .stats {
+    grid-area: C;
+    flex-direction: row;
+    padding: 6rem;
+    gap: 0;
+
+  }
+
+  #home .stats .stat+.stat {
+    border-left: 1px solid var(--brand-green);
+  }
+
+  #home .stats .stat {
+    flex: 1;
+
+  }
+
+  #home .button {
+    margin: 0;
+  }
+
+  #home img {
+    width: 42rem;
   }
 }
