--- a/style.css
+++ b/style.css
@@ -294,7 +294,7 @@ body.menu-expanded button path {
 #home::before {
   content: "";
   width: 100%;
-  height: calc(70% + var(--nav-height));
+  height: calc(76% + var(--nav-height));
   background-color: var(--brande-green-light);
   display: block;
 
@@ -305,6 +305,7 @@ body.menu-expanded button path {
 }
 
 #home {
+  padding-block: 0;
   padding-top: calc(4.1rem + var(--nav-height));
 }
 
@@ -519,6 +520,24 @@ footer .social-links {
     display: grid;
   }
 
+  section {
+    padding-block: 16rem
+  }
+
+  section header h2 {
+    font-size: 4rem;
+    line-height: 5.2rem;
+  }
+
+  .col-a {
+    grid-area: A;
+  }
+
+  .col-b {
+    grid-area: B;
+  }
+
+
   /*====== NAVIGATION =======*/
   /*====== RESET =======*/
   nav#navigation .wrapper * {
@@ -640,7 +659,7 @@ footer .social-links {
 
   /*====== HOME =======*/
   #home::before {
-    height: calc(86% - var(--nav-height));
+    height: calc(96% - var(--nav-height));
   }
 
   #home {
@@ -657,14 +676,10 @@ footer .social-links {
 
 
   #home .col-a {
-    grid-area: A;
     text-align: left;
     align-self: center;
   }
 
-  #home .col-b {
-    grid-area: B;
-  }
 
   #home h1 {
     font-size: 5.2rem;
@@ -698,4 +713,93 @@ footer .social-links {
   #home img {
     width: 42rem;
   }
+
+  /*====== SERVICES =======*/
+
+  #services h2 {
+    width: 47rem;
+    margin-inline: auto;
+  }
+
+  #services .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4rem;
+  }
+
+  #services .card {
+    width: 30%;
+    flex-grow: 1;
+  }
+
+  .cards h3 {
+    font-size: 2.3rem;
+  }
+
+
+  /*====== ABOUT =======*/
+  #about .wrapper {
+    grid-template-columns: 48rem 1fr;
+    grid-template-areas: 'B A';
+    gap: 6.7rem;
+
+  }
+
+  #about .wrapper img {
+    width: 48rem;
+    height: 41.4rem;
+  }
+
+  #about .col-a {
+    align-self: center;
+  }
+
+  #about .content p {
+    margin-bottom: 0;
+  }
+
+  /*====== CONTACT =======*/
+
+  #contact .wrapper {
+    grid-template-columns: 1fr 57.5rem;
+    grid-template-areas: 'A B';
+  }
+
+  #contact .wrapper img {
+    width: 57.7rem;
+    height: 37.9rem;
+  }
+
+  #contact .col-a {
+    align-self: center;
+  }
+
+  #contact h2 {
+    width: 40.4rem;
+  }
+
+  /*====== FOOTER =======*/
+
+  footer {
+    padding-block: 8rem;
+  }
+
+  footer .wrapper {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 'A B';
+  }
+
+  footer .col-a {
+    align-self: center;
+  }
+
+  footer .col-b {
+    align-self: center;
+    justify-self: end;
+  }
+
+  footer p {
+    margin-bottom: 0;
+  }
+
 }
